# docs-middleware

./: README.md
finnecto_middleware/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
finnecto_middleware/modules/invoice/application/dtos/: invoice_dto.py
finnecto_middleware/modules/invoice/application/use_cases/: invoice_forward_use_case.py
finnecto_middleware/modules/invoice/domain/constants/: connection_type.py
finnecto_middleware/modules/invoice/domain/entities/: invoice.py  invoice_item.py
finnecto_middleware/modules/invoice/domain/factories/: connection_factory.py
finnecto_middleware/modules/invoice/domain/interfaces/: auth_strategy.py  invoice_transformer.py
finnecto_middleware/modules/invoice/domain/strategies/: basic_auth_strategy.py  jwt_auth_strategy.py
finnecto_middleware/modules/invoice/domain/transformers/: legacy_transformer.py  taxeable_transformer.py
finnecto_middleware/modules/invoice/presentation/controllers/: invoice_controller.py
finnecto_middleware/modules/invoice/presentation/dtos/: invoice_input_dto.py
finnecto_middleware/shared/auth/: jwt_claims.py  jwt_decoder.py
finnecto_middleware/shared/dtos/: api_response.py
finnecto_middleware/shared/exceptions/: handlers.py
finnecto_middleware/shared/services/: http_forwarder.py
finnecto_middleware/tests/:  test_factory.py  test_auth_strategies.py  test_e2e.py  test_entity.py  test_transformers.py
mock-server/: Dockerfile  docker-compose.yml  factories.js  package-lock.json  package.json  server.js
